fix: task reminder bug
