# src/controllers/taskReminderController.js
@@ -1,4 +1,8 @@
 const { PrismaClient } = require('@prisma/client')
+const schedule = require('node-schedule');
+const { sendNotification } = require('../helpers/notification');
+const moment = require('moment-timezone');
+
 const prisma = new PrismaClient();
 
 module.exports = {
@@ -47,11 +51,20 @@ module.exports = {
     },
     create: async (req, res) => {
         try {
-            const { name, type, days, is_active } = req.body;
+            const {
+                name,
+                type,
+                date,
+                is_active,
+            } = req.body;
 
             const newReminder = await prisma.task_reminders.create({
                 data: {
-                    name, type, days, is_active, user_id: req.user.id
+                    name,
+                    type,
+                    date: new Date(date).toISOString(),
+                    is_active: Boolean(is_active),
+                    user_id: req.user.id
                 }
             });
 
@@ -66,11 +79,16 @@ module.exports = {
     update: async (req, res) => {
         try {
             const { id } = req.params;
-            const { name, type, days, is_active } = req.body;
+            const {
+                name,
+                type,
+                date,
+                is_active,
+            } = req.body;
 
             const checkReminder = await prisma.task_reminders.findUnique({
                 where: {
-                    id
+                    id: Number(id)
                 }
             });
             if (!checkReminder) {
@@ -84,10 +102,14 @@ module.exports = {
 
             const updateReminder = await prisma.task_reminders.update({
                 where: {
-                    id
+                    id: Number(id)
                 },
                 data: {
-                    name, type, days, is_active, user_id: req.user.id
+                    name,
+                    type,
+                    date: new Date(date).toISOString(),
+                    is_active: Boolean(is_active),
+                    user_id: req.user.id
                 }
             });
 
@@ -105,7 +127,7 @@ module.exports = {
 
             const checkReminder = await prisma.task_reminders.findUnique({
                 where: {
-                    id
+                    id: Number(id)
                 }
             });
             if (!checkReminder) {
@@ -119,7 +141,7 @@ module.exports = {
 
             await prisma.task_reminders.delete({
                 where: {
-                    id
+                    id: Number(id)
                 }
             });
 
@@ -131,4 +153,31 @@ module.exports = {
             res.status(500).send(error.message)
         }
     },
+    scheduler: async () => {
+        schedule.scheduleJob('*/5 * * * * *', async () => {
+            const reminders = await prisma.task_reminders.findMany({
+                include: {
+                    user: {}
+                },
+                where: {
+                    is_active: true
+                }
+            });
+
+            reminders.forEach(async (item) => {
+                if (moment().format('HH:mm') === moment(item.date).format("HH:mm")) {
+                    await sendNotification({ title: item.name, subtitle: moment().format('LL'), playerId: item.user.onesignal_id });
+
+                    await prisma.task_reminders.update({
+                        where: {
+                            id: item.id
+                        },
+                        data: {
+                            is_active: false,
+                        }
+                    });
+                }
+            })
+        });
+    }
 }
